@@ -1,6 +1,6 @@
 Software License Agreement (New BSD License)
 
-Copyright (c) 2006-2008, Christoph Dorn
+Copyright (c) 2006-2009, Christoph Dorn
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification,
